# squasher_LD54

./: .gitignore  CMakeLists.txt  Player.cpp  README.md  Sprite.cpp  Sprite.h  Wall.cpp  Wall.h  logSDLError.cpp  logSDLerror.h  main.cpp
source/: CordsSize.h  Level.cpp  Level.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h  Start.cpp  Start.h  State.h  Wall.cpp  Wall.h  Window.cpp  Window.h  main.cpp
